--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1,6 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="app_name">Medobs</string>
-    <string name="label_select_ambulance">Ambulancie</string>
-    <string name="label_settings">Nastavenia</string>
+	<string name="app_name">Medobs</string>
+	<string name="label_select_ambulance">Medical office</string>
+	<string name="label_settings">Settings</string>
+	
+	<string name="label_server_url">Server URL</string>
+	<string name="server_url_summary">URL server address</string>
+	<string name="label_username">Username</string>
+	<string name="label_password">Password</string>
 </resources>
