--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -8,6 +8,7 @@
 	<string name="server_url_summary">URL server address</string>
 	<string name="label_username">Username</string>
 	<string name="label_password">Password</string>
+	<string name="label_refresh">Refresh</string>
 
 	<string name="msg_login_failed">Login to server was not successful. Check your login credentials.</string>
 	<string name="msg_server_url_not_configured">Server URL address is not configured.</string>
