--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 	<string name="app_name">Medobs</string>
-	<string name="label_select_place">Select place</string>
+	<string name="label_select_office">Select office</string>
 	<string name="label_settings">Settings</string>
 
 	<string name="label_server_url">Server URL</string>
